[gd_scene load_steps=15 format=2]

[ext_resource path="res://GameOverCollider.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Scene.gd" type="Script" id=2]
[ext_resource path="res://HUDControls.gd" type="Script" id=3]
[ext_resource path="res://HelthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://SugarParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Verlet.tscn" type="PackedScene" id=6]
[ext_resource path="res://JellyK.tscn" type="PackedScene" id=7]
[ext_resource path="res://Animations.tscn" type="PackedScene" id=8]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=9]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/title.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/PressStart2P-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 8
outline_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 127.039, 10 )

[node name="Scene" type="Node2D"]
script = ExtResource( 2 )

[node name="Enemies" type="Node2D" parent="."]

[node name="TopString" parent="." instance=ExtResource( 6 )]
position = Vector2( 5.82367, 140.702 )
z_index = 5
length = 310.0
gravity = Vector2( 0, 1 )
top = true
initial_position = Vector2( 0, -150 )
active_string = false

[node name="BottomString" parent="." instance=ExtResource( 6 )]
position = Vector2( 5.82367, 140.702 )
length = 310.0
gravity = Vector2( 0, -10 )
string_pull_impact = Vector2( 0, 30 )
bottom = true

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 148.889, 43.6859 )
jump_power = 600
min_jump_power = 500
SugarEffect = ExtResource( 5 )
player_scale = 1.5

[node name="WallLeft" parent="." instance=ExtResource( 9 )]
position = Vector2( -0.213574, -1.57599 )
z_index = 7

[node name="WallDown" parent="." instance=ExtResource( 9 )]
position = Vector2( 13.3834, 178.844 )
rotation = -1.5708
scale = Vector2( 1, 1.5 )

[node name="WallRight" parent="." instance=ExtResource( 9 )]
position = Vector2( 291.205, 0.314575 )
z_index = 7

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 145.383, 88.5494 )
current = true
zoom = Vector2( 0.8, 1 )

[node name="Ground" parent="." instance=ExtResource( 10 )]
position = Vector2( 157.153, 178.583 )

[node name="Animations" parent="." instance=ExtResource( 8 )]

[node name="HUD" type="Node2D" parent="."]
z_index = 6
script = ExtResource( 3 )

[node name="title" type="Sprite" parent="HUD"]
position = Vector2( 152.289, 73.7265 )
scale = Vector2( 1.87725, 1.87725 )
z_as_relative = false
texture = ExtResource( 11 )

[node name="HeathBar" parent="HUD" instance=ExtResource( 4 )]
margin_left = 107.762
margin_top = 172.397
margin_right = 140.762
margin_bottom = 212.397
rect_scale = Vector2( 5, 2 )
healthy_color = Color( 1, 0, 0, 1 )
danger_mid = Color( 0.964706, 0.643137, 0.0431373, 1 )
danger_color = Color( 0, 1, 0.156863, 1 )

[node name="HUDControls" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD/HUDControls"]
margin_left = 18.0
margin_top = 162.768
margin_right = 273.0
margin_bottom = 176.768
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "crushed: 100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverPopup" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HUD/GameOverPopup"]
margin_left = 85.2182
margin_top = 49.0
margin_right = 201.218
margin_bottom = 119.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText " type="Label" parent="HUD/GameOverPopup"]
margin_left = 91.2448
margin_top = 65.0815
margin_right = 195.245
margin_bottom = 73.0815
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Gummy Crushed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HUD/GameOverPopup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 117.5
margin_top = 44.5
margin_right = 165.5
margin_bottom = 64.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Label" parent="HUD/GameOverPopup"]
margin_left = 95.3084
margin_top = 90.6951
margin_right = 192.308
margin_bottom = 109.695
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Menu
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverCollider" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="GameOverCollider"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverCollider/Area2D"]
position = Vector2( 148.063, 10.0924 )
shape = SubResource( 3 )
[connection signal="pressed" from="HUD/GameOverPopup/Button" to="HUD" method="_on_Button_pressed"]
[connection signal="body_entered" from="GameOverCollider/Area2D" to="GameOverCollider" method="_on_Area2D_body_entered"]
